# side_effects

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
lib/: Cargo.toml
lib/src/: lib.rs
lib/src/components/: animation.rs  camera.rs  lighting.rs  main_menu.rs  mod.rs  movement.rs  mushroom.rs  tanuki.rs  tree.rs
lib/src/events/: animation.rs
lib/src/plugins/: animation.rs  asset_loader.rs  camera.rs  debug.rs  lighting.rs  main_menu.rs  mod.rs  mouse_capture.rs  movement.rs  mushroom_generator.rs  player.rs  selection.rs  tanuki.rs  terrain.rs
lib/src/plugins/ai/: components.rs  mod.rs  systems.rs
lib/src/plugins/audio/: event.rs  mod.rs  resource.rs  state.rs  system.rs
lib/src/plugins/camera/: mod.rs  system.rs
lib/src/plugins/follower/: ai.rs  mod.rs
lib/src/plugins/game_ui/: component.rs  mod.rs  resource.rs  system.rs
lib/src/plugins/loading/: mod.rs  resource.rs  system.rs
lib/src/plugins/main_menu/: component.rs  mod.rs  system.rs
lib/src/plugins/mushroom_generator/: component.rs  mod.rs  resource.rs  system.rs
lib/src/plugins/player/: component.rs  mod.rs  system.rs
lib/src/plugins/sun/: component.rs  mod.rs  resource.rs  system.rs
lib/src/plugins/terrain/: component.rs  mod.rs  resource.rs  system.rs
lib/src/plugins/tree_generator/: component.rs  mod.rs  resource.rs  system.rs
lib/src/plugins/ui/: components.rs  mod.rs  systems.rs  utils.rs
lib/src/resources/: animation.rs  mod.rs  player.rs
lib/src/states/: game_state.rs  mod.rs
lib/src/systems/: animation.rs  camera.rs  lighting.rs  loading.rs  main_menu.rs  mod.rs  movement.rs  mushroom_generator.rs  player.rs  terrain.rs
side_effects/: Cargo.toml
side_effects/assets/models/: Tanuki.glb  mushroom1.glb  mushroom2.glb  mushroom3.glb  mushroom4.glb
side_effects/src/: lib.rs  main.rs
src/: main.rs
