[package]
name = "side_effects"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bevy = "0.10.1"
wasm-bindgen = "0.2.84"
console_error_panic_hook = "0.1"

[profile.release]
# opt-level = 's'
# opt-level = 'z'
opt-level = 's'
lto = "thin"