[package]
name = "side_effects_lib"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.10.1"
bevy_rapier3d = "0.21.0"
leafwing-input-manager = "0.9.1"
noise = "0.8.2"
iyes_progress = { version = "0.8", features = [ "assets" ] }
log = "0.4.17"
rand = "0.8.5"