[package]
name = "the_tanuki_trip_lib"
version = "0.1.0"
publish = false
authors = ["silverevo <silverevo03@gmail.com>"]
edition = "2021"
# exclude = ["dist", "build", "assets", "credits"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

[profile.release]
lto = true
codegen-units = 1

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[features]
dev = [
    "bevy/bevy_dylib",
]

# Bevy defaults minus audio and some other not needed things
# see https://github.com/bevyengine/bevy/blob/main/Cargo.toml#L31-L54
default = [
    "bevy/animation",
    "bevy/bevy_asset",
    "bevy/bevy_scene",
    "bevy/bevy_winit",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_pbr",
    "bevy/bevy_gltf",
    "bevy/bevy_render",
    "bevy/bevy_sprite",
    "bevy/bevy_text",
    "bevy/bevy_ui",
    "bevy/png",
    "bevy/hdr",
    "bevy/zstd",
    "bevy/x11",
    "bevy/ktx2",
    "bevy/filesystem_watcher",
    "bevy/tonemapping_luts"
]

[dependencies]
bevy = { version = "0.10.1", default-features = false }
bevy_egui = "0.20"
bevy_mod_outline = "0.4"
bevy_rapier3d = { version = "0.21.0", default-features = false }
bevy_sprite3d = "2"
big-brain = "0.17"
leafwing-input-manager = "0.9.1"
noise = "0.8.2"
iyes_progress = { version = "0.8", features = [ "assets" ] }
log = "0.4.17"
oxidized_navigation = "0.3"
rand = "0.8.5"
bevy_kira_audio = "0.15.0"
colorgrad = "0.6.2"
bevy_atmosphere = "0.6.0"
bevy_ninepatch = "0.10.0"

# keep the following in sync with Bevy's dependencies
winit = { version = "0.28", default-features = false }
image = { version = "0.24", default-features = false }

[build-dependencies]
embed-resource = "1.4"
